# m2t

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/m2t/: main.py
